--- a/app/src/main/res/layout/activity_formulario__jogador.xml
+++ b/app/src/main/res/layout/activity_formulario__jogador.xml
@@ -62,6 +62,8 @@
         android:layout_height="40dp"
         android:layout_marginTop="88dp"
         android:text="Cadastro de Jogador"
+        android:background="#f00"
+        android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
