Alteração de Layout

--- a/app/src/main/res/layout/activity_formulario__jogador.xml
+++ b/app/src/main/res/layout/activity_formulario__jogador.xml
@@ -43,6 +43,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.355" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+
     <EditText
         android:id="@+id/txtnumerojogador"
         android:layout_width="wrap_content"
@@ -62,6 +68,8 @@
         android:layout_height="40dp"
         android:layout_marginTop="88dp"
         android:text="Cadastro de Jogador"
+        android:background="#f00"
+        android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
