--- a/app/src/main/res/layout/activity_formulario__time.xml
+++ b/app/src/main/res/layout/activity_formulario__time.xml
@@ -36,6 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cadastro do Time "
+        android:background="#f00"
+        android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
