--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,10 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lvTimes">
+        android:id="@+id/lvTimes"
+        android:background="#4CAF50"
+        android:textColor="#fff">
+
     </ListView>
 
 
