Alteração de visual

--- a/app/src/main/res/layout/content_jogadores.xml
+++ b/app/src/main/res/layout/content_jogadores.xml
@@ -10,10 +10,10 @@
 
 
     <ListView
+        android:id="@+id/lvJogadores"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lvJogadores"
-        android:background="#03A9F4"
+        android:background="#00BCD4"
         android:textColor="#fff">
 
     </ListView>
