--- a/app/src/main/res/layout/activity_formulario__jogador.xml
+++ b/app/src/main/res/layout/activity_formulario__jogador.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Formulario_JogadorActivity">
+    tools:context=".Formulario_JogadorActivity"
+    android:background="#203F51B5">
 
     <Button
         android:id="@+id/btnsalvarjogador"
@@ -24,11 +25,11 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Posição"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <EditText
         android:id="@+id/txtjogadornome"
@@ -36,17 +37,16 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Nome do Jogador"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.355" />
+        app:layout_constraintVertical_bias="0.346" />
 
     <TextView
+        android:id="@+id/textView8"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
 
     <EditText
@@ -55,7 +55,6 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Numero do Jogador"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,18 +62,60 @@
         app:layout_constraintVertical_bias="0.658" />
 
     <TextView
-        android:id="@+id/cadastrojogador"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="88dp"
-        android:text="Cadastro de Jogador"
-        android:background="#f00"
-        android:textColor="#fff"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="99dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="261dp"
+        android:layout_marginBottom="5dp"
+        android:text="Posição"
+        app:layout_constraintBottom_toTopOf="@+id/txtjogadorposicao"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/txtjogadornome" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="97dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="187dp"
+        android:layout_marginBottom="1dp"
+        android:text="Numero do Jogador"
+        app:layout_constraintBottom_toTopOf="@+id/txtnumerojogador"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtjogadorposicao" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="73dp"
+        android:layout_marginTop="54dp"
+        android:layout_marginEnd="73dp"
+        android:text="CADASTRO JOGADORES"
+        android:textColor="#F10202"
+        android:textColorLink="#A81313"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="98dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="199dp"
+        android:layout_marginBottom="40dp"
+        android:text="Nome do Jogador"
+        app:layout_constraintBottom_toTopOf="@+id/txtjogadornome"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
