--- a/app/src/main/res/layout/activity_jogadores.xml
+++ b/app/src/main/res/layout/activity_jogadores.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JogadoresActivity">
+    tools:context=".Jogadores">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
